--- a/stylesheets/custom-styles.css
+++ b/stylesheets/custom-styles.css
@@ -33,6 +33,26 @@
 	background-color: #EEEEEE;
 }
 
+.navbar-sub > li:hover > .navbar-dropdown {
+	display: block;
+}
+
+.navbar-dropdown {
+	display: none;
+	position:absolute;
+	top: 50px;
+	margin-left: -13px;
+	background: #ffffff;
+	padding:0;
+	border-radius: 2px;
+}
+
+.navbar-dropdown > li {
+	display: block;
+	float: none;
+	padding: 8px 13px;
+}
+
 .page-header.small {
 	padding: 1rem;
 }
